--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <script src="./maths.js"></script>
-  <script src="./maths.test.js"></script>
+  <!-- <script src="./maths.test.js"></script> -->
+  <script src="./maths.test.3.js"></script>
 </head>
 <body>
   
